* Add support for LGR13

## Major Bug Fixes
* It is possible to properly collect more than 200 apples in a single frame
* Wheel turning the wrong way in replays is fixed (glitch starts at 455 speed instead of 124 speed, where max gas speed is approximately 220)
* Fix crash related to "too complicated" (too large) mask and too large picture in lgr

## Minor Features
* Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
* Error messages and menu warnings are now vertically centered on the screen
* Intro scrolling animation will always take 1.15 seconds, regardless of screen resolution
* Intro scrolling animation is now skippable by pressing Enter or Esc, instead of being an eolconf setting
* Background menu balls start off centered in the screen
* Palette is processed as a 24-bit color instead of an 18-bit color, slightly improving color accuracy
* Maximum number of displayed levels/recs in menu increased from 29 to up to 200 for high resolutions
* Dialog pop-ups are centered on the screen
* message.inf is no longer required to view error messages, and error messages are now all in English
* turntime can now be configured
* You can now type more non-letter symbols in game menus, like saving a replay or level named `!cov!`
* Save play is enabled for internal 55, More Levels
* Key repeat now works in menu so you can hold arrow down to go down or a to save many a.rec
* Numpad NumLock state is now respected: navigation when NumLock is off, digit input when on
* Bike controls configured to numpad keys now work regardless of NumLock state
* You can now use mouse scroll wheel to navigate the menu
* Mouse scroll now works in the editor for selecting level, lgr and pictures
* Elma now saves State.dat when you change options
* You can now f1-p in editor (same as f1-enter but in editor)
* You can now change what LGR to use as the default from inside the options menu