@@ -12,6 +12,7 @@
 * It is possible to properly collect more than 200 apples in a single frame
 * Wheel turning the wrong way in replays is fixed (glitch starts at 455 speed instead of 124 speed, where max gas speed is approximately 220)
 * Fix crash related to "too complicated" (too large) mask and too large picture in lgr
+* Fix Uphill Battle bug where very wide grass polygons are not rendered properly at high zoom
 
 ## Minor Features
 * Improve picture loading speed by allocating all needed memory at once instead of allocating in blocks of 64 KB (DOS-era restriction)
